--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,11 @@
 [package]
-name = "panel4shinji"
+name = "panel4yui"
 version = "0.1.0"
 edition = "2024"
 
+[features]
+debug-print = []
+
 [dependencies]
+actix-files = "0.6.6"
 actix-web = "4.11.0"
